work on zone display fixes + air bar fix