@@ -1,23 +1,18 @@
 package com.creatorsplash.oxygenheist.application.match.zone;
 
 import com.creatorsplash.oxygenheist.domain.zone.CaptureZoneState;
+import lombok.RequiredArgsConstructor;
 
-import java.util.Collections;
-import java.util.Map;
-import java.util.Optional;
-import java.util.Set;
+import java.util.*;
 
 /**
  * Represents the computed presence of teams within capture zones for a single tick
  * <p>Read-only</p>
  */
+@RequiredArgsConstructor
 public class ZonePresence {
 
-    private final Map<CaptureZoneState, Map<String, Integer>> zoneTeamCounts;
-
-    public ZonePresence(Map<CaptureZoneState, Map<String, Integer>> zoneTeamCounts) {
-        this.zoneTeamCounts = zoneTeamCounts;
-    }
+    private final Map<CaptureZoneState, Map<String, Set<UUID>>> zoneTeamPlayers;
 
     /**
      * Gets team counts for a specific zone
@@ -26,22 +21,38 @@ public class ZonePresence {
      * @return team -> player count map
      */
     public Map<String, Integer> getTeamCounts(CaptureZoneState zone) {
-        return zoneTeamCounts.getOrDefault(zone, Collections.emptyMap());
+        Map<String, Set<UUID>> teamPlayers = zoneTeamPlayers.getOrDefault(zone, Map.of());
+        Map<String, Integer> counts = new HashMap<>();
+        teamPlayers.forEach((teamId, players) -> counts.put(teamId, players.size()));
+        return counts;
+    }
+
+    /**
+     * Gets present players of a team for a specific zone
+     *
+     * @param zone the zone
+     * @param teamId the team id
+     */
+    public Set<UUID> getPlayersForTeam(CaptureZoneState zone, String teamId) {
+        Map<String, Set<UUID>> teamPlayers = zoneTeamPlayers.get(zone);
+        if (teamPlayers == null) return Set.of();
+        return teamPlayers.getOrDefault(teamId, Set.of());
     }
 
     /**
      * @return true if the zone has no players
      */
     public boolean isEmpty(CaptureZoneState zone) {
-        return !zoneTeamCounts.containsKey(zone) || zoneTeamCounts.get(zone).isEmpty();
+        Map<String, Set<UUID>> teamPlayers = zoneTeamPlayers.get(zone);
+        return teamPlayers == null || teamPlayers.isEmpty();
     }
 
     /**
      * @return true if multiple teams are present in the zone
      */
     public boolean isContested(CaptureZoneState zone) {
-        Map<String, Integer> counts = zoneTeamCounts.get(zone);
-        return counts != null && counts.size() > 1;
+        Map<String, Set<UUID>> teamPlayers = zoneTeamPlayers.get(zone);
+        return teamPlayers != null && teamPlayers.size() > 1;
     }
 
     /**
@@ -51,37 +62,28 @@ public class ZonePresence {
      * @return optional team id
      */
     public Optional<String> getSingleTeam(CaptureZoneState zone) {
-        Map<String, Integer> counts = zoneTeamCounts.get(zone);
-        if (counts == null || counts.size() != 1) {
-            return Optional.empty();
-        }
-
-        return Optional.of(counts.keySet().iterator().next());
+        Map<String, Set<UUID>> teamPlayers = zoneTeamPlayers.get(zone);
+        if (teamPlayers == null || teamPlayers.size() != 1) return Optional.empty();
+        return Optional.of(teamPlayers.keySet().iterator().next());
     }
 
     /**
      * Checks whether a specific team is present in the zone
      */
     public boolean isTeamPresent(CaptureZoneState zone, String teamId) {
-        Map<String, Integer> counts = zoneTeamCounts.get(zone);
-        return counts != null && counts.containsKey(teamId);
+        Map<String, Set<UUID>> teamPlayers = zoneTeamPlayers.get(zone);
+        return teamPlayers != null && teamPlayers.containsKey(teamId);
     }
 
     public boolean isTeamInOwnedZone(String teamId) {
-        for (CaptureZoneState zone : zoneTeamCounts.keySet()) {
-            if (isTeamPresent(zone, teamId) &&
-                teamId.equals(zone.getOwnerTeamId())) {
-                return true;
-            }
-        }
-        return false;
+        return false; // TODO if we still need
     }
 
     /**
      * Gets all zones with presence data
      */
     public Set<CaptureZoneState> getZones() {
-        return zoneTeamCounts.keySet();
+        return zoneTeamPlayers.keySet();
     }
 
 }
